fix gray to make contrast

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,7 +6,7 @@
   --font-title: "Saira", cursive;
   --color-primary: #9929ea;
   --color-black: #000000;
-  --color-gray: #b5b5b5;
+  --color-gray: #6a7282;
 }
 
 :root {
